src/styles/accPage.scss
#acc_page,
#delivery,
#summaryOrder {
    form {
        display: grid;
        column-gap: 1rem;
        row-gap: 2rem;
        grid-template-columns: 45% 45%;
        padding: 2rem;
        margin: 5rem auto;
        box-shadow: rgba(0, 0, 0, 10%) 0px 4px 12px;
        background: white;
        border-radius: 1rem;
        align-items: center;
        justify-content: center;
        max-width: 500px;
        position: relative;
        .password {
            div {
                cursor: pointer;
                position: absolute;
                width: 10%;
                right: 7px;
                top: 50%;
                transform: translateY(-50%);
                svg {
                    max-width: 100%;
                }
            }
        }
        .avatar-container, h2 {
            grid-column-start: 1;
            grid-column-end: 3;
        }
        img {
            max-width: 100%;
            object-fit: cover;
        }
        .avatar-container {
            position: relative;
            border-radius: 50%;
            margin: auto;
            height: 200px;
            width: 200px;
            box-shadow: rgba(0, 0, 0, 0.45) 0px 3px 8px;
            img {
                max-width: 100%;
                width: 100%;
                height: 100%;
                object-fit: cover;
                border-radius: 100%;
            }
            .delete-avatar {
                position: absolute;
                top: 0%;
                right: 0%;
                border: 1px solid orange;
                box-shadow: rgba(0, 0, 0, 0.45) 0px 3px 8px;
                background-color: #888;
                border-radius: 100%;
                cursor: pointer;
                line-height: 1;
                height: 35px;
                width: 35px;
                color: #fff;
                opacity: 0.2;
                z-index: 2;
                transition: .15s ease-in;
                &:hover {
                    opacity: 1;
                }
            }
            .input-file-avatar {
                position: absolute;
                top: 0%;
                left: 0%;
                border-radius: 100%;
                background-color: #f5f5f5;
                width: 100%;
                height: 100%;
                display: flex;
                align-items: center;
                justify-content: center;
                opacity: 0.3;
                transition: opacity .15s ease-in;
                &:hover {
                    opacity: .95;
                }
                label {
                    color: #000;
                    left: 50%;
                    width: 100%;
                    transform: translate(-50%, -50%);
                    margin: auto;
                    background-color: transparent;
                    text-align: center;
                    line-height: 1;
                }
                input {
                    border: none !important;
                    opacity: 0;
                    width: 100%;
                    height: 100%;
                    cursor: pointer;
                }
            }
        }
        h2 {
            width: 100%;
            text-align: center;
        }
        input, button {
            text-decoration: none;
            height: fit-content;
            border: 2px solid #888;
            border-radius: .25rem;
            padding: .5rem;
        }
        div {
            position: relative;
        }
        button {
            grid-column-start: 1;
            grid-column-end: 3;
            background-color: #888;
            color: #fff;
            font-weight: 600;
            cursor: pointer;
            font-size: .9rem;
            text-transform: uppercase;
        }
        input {
            position: relative;
            width: 100%;
            &.wrong {
                animation: shake 1s;
            }
        }
        input.email-used {
            border: 2px solid orange !important;
        }
        label {
            position: absolute;
            top: 50%;
            transform: translateY(-50%);
            left: 5px;
            padding: .25rem;
            line-height: .8;
            transition: .135s ease-in;
            background: #fff;
            display: flex;
            align-items: center;
            font-size: .85rem;
            font-weight: 300;
            color: rgba(136, 136, 136, 0.541);
            cursor: unset;
        }
        input:focus + label,
        input:valid + label {
            top: -65%;
            transform: translateY(65%);
            font-size: .75rem;
            color: #000;
        }
        .info {
            position: absolute;
            top: 0;
            left: 0;
        }
        .input-helper-container {
            grid-column-end: 3;
            grid-column-start: 1;
            min-height: 20px;
        }
    }
    .confirmation {
        position: fixed;
        top: 20%;
        left: 50%;
        transform: translate(-50%, -20%);
        background: #fff;
        padding: 3rem;
        border-radius: .5rem;
        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
        display: flex;
        flex-direction: column;
        row-gap: 1rem;
        text-align: center;
        z-index: 2;
        button {
            background-color: #888;
            color: #fff;
            font-weight: 600;
            cursor: pointer;
            font-size: .9rem;
            text-transform: uppercase;
            padding: .5rem;
            border-radius: .5rem;
            border: 0;
            width: 100%;
            &:last-child {
                background-color: red;
            }
            &:disabled {
                opacity: .2;
                cursor: unset;
            }
        }
    }
    .login {
        width: 20%;
        margin: 5rem auto;
    }
}

@media screen and (min-width: 1600px) {
    #acc_page {
        display: flex;
        justify-content: space-around;
    }
}
@media screen and (max-width: 1600px) {
    #acc_page {
        display: flex;
        flex-direction: column;
    }
}

